---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/pointers/test_funtion_pointer_explicit_deref.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/pointers/test_funtion_pointer_explicit_deref.c"
   (function-definition external
      f~0 `fn(x: int) -> int`
      (params
         x~2 `int`)
      (compound-statement
         (return (add `int` (x~2 `int`) (2 `int`)))))
   (function-definition external
      main~3 `fn() -> int`
      (compound-statement
         (definition x~5 `int` (40 `int`))
         (definition p~6 `ptr<fn(∅: int) -> int>`
            (addressof `ptr<fn(x: int) -> int>`
               (f~0 `fn(x: int) -> int`)))
         (return
            (call `int`
               (addressof `ptr<fn(∅: int) -> int>`
                  (deref `fn(∅: int) -> int`
                     (addressof `ptr<fn(∅: int) -> int>`
                        (deref `fn(∅: int) -> int`
                           (addressof `ptr<fn(∅: int) -> int>`
                              (deref `fn(∅: int) -> int`
                                 (addressof `ptr<fn(∅: int) -> int>`
                                    (deref `fn(∅: int) -> int` (p~6 `ptr<fn(∅: int) -> int>`)))))))))
               (x~5 `int`))))))

----- stderr -----
